--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "next build",
     "start": "next start",
     "test": "jest --watch",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "test:coverage": "jest --watch --coverage"
   },
   "dependencies": {
     "next": "latest",
@@ -18,8 +19,11 @@
     "@testing-library/user-event": "14.4.3",
     "@types/react": "18.0.28",
     "@types/testing-library__jest-dom": "5.14.5",
+    "autoprefixer": "^10.4.14",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
     "typescript": "4.9.5"
   }
 }
