--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,7 +1,7 @@
 name: Jest test
 on: 
   push:
-    branches: [ main, pull-request ]
+    branches: [ pull-request ]
 
 jobs:
   Jest:
@@ -12,4 +12,4 @@ jobs:
         with:
           node-version: latest
       - run: npm ci
-      - run: npm run test:ci
+      - run: npm run test:coverage
