--- a/.github/workflows/teste.yml
+++ b/.github/workflows/teste.yml
@@ -7,9 +7,17 @@ jobs:
   Jest:
     runs-on: ubuntu-latest
     steps:
+      - name: Rodar os testes
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: latest
       - run: npm ci
       - run: npm run test:ci
+      
+      - name: Impedir merge em caso de falha
+        run: |
+          if [ ${{ job.status }} == 'failure' ]; then
+            echo "Os testes falharam. O merge está bloqueado."
+            exit 1
+          fi
