--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -13,11 +13,12 @@ jobs:
         with:
           node-version: latest
       - run: npm ci
-      - run: npm run test:coverage
-      
-      - name: Impedir merge em caso de falha
+      - name: Verificar cobertura
         run: |
-          if [ ${{ job.status }} == 'failure' ]; then
-            echo "Os testes falharam. O merge está bloqueado."
+          # Comando para coletar a porcentagem de cobertura do Jest
+          coverage=$(npm run coverage -- --no-watch --json | jq '.total.lines.pct')
+
+          if (( $(echo "$coverage < 100" | bc -l) )); then
+            echo "A cobertura do Jest é menor que 100% (${coverage}%). O merge está bloqueado."
             exit 1
           fi
