--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -14,7 +14,7 @@ jobs:
       - run: npm ci
 
       - name: Executar Testes
-        run: npm test:coverage
+        run: npm run test:coverage
 
       - name: Verificar Cobertura
         run: |
