--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -9,18 +9,18 @@ jobs:
 
     steps:
       - name: Checkout do repositório
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Configurar Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 18
 
       - name: Instalar dependências
         run: npm install
 
       - name: Executar Testes
-        run: npm test -- --coverage
+        run: npm run test:coverage
 
       - name: Verificar Cobertura
         run: |
