--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,12 +1,20 @@
-name: Verificação de Cobertura de Teste
-
+name: Jest test coverage
 on: 
   push:
     branches: [ pull-request ]
 
 jobs:
-  coverage:
+  Jest:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ArtiomTr/jest-coverage-report-action@v2
+      - uses: actions/setup-node@v3
+        with:
+          node-version: latest
+      - run: npm ci
+
+      - name: Executar Testes
+        run: npm run test:coverage
+
+      - name: Testa se ocorre o erro
+        run: exit 1
