--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "next start",
     "test": "jest --watch",
     "test:ci": "jest --ci",
-    "test:coverage": "jest --ci --coverage"
+    "test:coverage": "jest --ci --coverage --collectCoverage"
   },
   "dependencies": {
     "next": "latest",
